# triforce

./: .gitmodules  Cargo.toml  Makefile  README.md  manifest.ttl  triforce.ttl
examples/: performance_test.rs
ndarray-linalg/lax/: Cargo.toml
src/: lib.rs
